k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-deployment
spec:
  replicas: 2 # ReplicaSet
  selector:
    matchLabels:
      app: k8s
  template: # Pods
    metadata: 
      labels:
        app: k8s
    spec:
      containers: # Container
        - name: k8s
          images: DOCKER_IMAGE # Sẽ được Jenkins thay thế phù hợp
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-service
spec:
  selector:
    app: k8s # <=> tên Pods
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 # ContainerPort
  type: ClusterIP
